--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "aternos/model": "^3.0",
         "miladrahimi/phprouter": "5.*",
-        "laminas/laminas-validator": "^2.5"
+        "laminas/laminas-validator": "^2.5",
+        "nilportugues/sql-query-builder": "^1.8"
     }
 }
