--- a/.htaccess
+++ b/.htaccess
@@ -13,4 +13,5 @@
     RewriteRule ^ index.php [L]
 </IfModule>
 
-php_flag display_errors 1
+php_flag display_errors on
+php_value error_reporting -1
