--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "aternos/model": "^3.0",
         "miladrahimi/phprouter": "5.*",
         "laminas/laminas-validator": "^2.5",
-        "nilportugues/sql-query-builder": "^1.8"
+        "nilportugues/sql-query-builder": "^1.8",
+        "rakit/validation": "^1.4"
     }
 }
